--- a/restaurant/templates/users/login.html
+++ b/restaurant/templates/users/login.html
@@ -8,69 +8,69 @@
 
 
 {% block Title_of_block %}
-    <h5 class="text-pot">Welcome Back !</h5>
-    <br>
-    <p>Sign in to continue to your restaurant account.</p>
+<h5 class="text-pot">Welcome Back !</h5>
+<br>
+<p>Sign in to continue to your restaurant account.</p>
 {% endblock %}
-   
+
 {% block form %}
-    <form class="form-group" action="{% url 'home' %}" method="POST">
-        {% csrf_token %}
-        
-        {% if form.errors %}
-            <p class="alert alert-danger">
-                Your username and password didn't match. Please try again.
-            </p>
-        {% endif%}
-    
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" id="username"placeholder="Enter username">
-        </div>
+<form class="form-group" method="POST">
+    {% csrf_token %}
+    {% if form.errors %}
+    <p class="alert alert-danger">
+        Your username and password didn't match. Please try again.
+    </p>
+    {% endif%}
 
-        <div class="form-group">
-            <label for="userpassword">Password</label>
-            <input type="password" class="form-control" id="userpassword"placeholder="Enter password">
-        </div>
-
-        <div class="custom-control custom-checkbox pb-2">
-            <input type="checkbox" class="custom-control-input"id="customControlInline">
-            <label class="custom-control-label"for="customControlInline">Remember me</label>
-        </div>
-        
-        <div class="mt-3">
-            <button class="btn btn-primary btn-block waves-effectwaves-light" type="submit">Log In</button>
-        </div>
-    </form>
-
-
-    <div class="mt-4 text-center">
-        <h5 class="font-size-14 mb-3">Sign in with</h5>
-
-        <ul class="list-inline">
-            <li class="list-inline-item">
-                <a href="javascript::void()" class="social-list-item bg-primary text-white border-primary">
-                    <i class="mdi mdi-facebook"></i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-                <a href="javascript::void()" class="social-list-item bg-info text-white border-info">
-                    <i class="mdi mdi-twitter"></i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-                <a href="javascript::void()" class="social-list-item bg-danger text-white border-danger">
-                    <i class="mdi mdi-google"></i>
-                </a>
-            </li>
-        </ul>
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" placeholder="Enter username" name="username">
     </div>
-    
-    <div class="mt-5 text-center">
-        <div>
-            <p>Don't have an account ? <a href="{% url 'users:signup' %}"class="font-weight-medium text-primary"> Signup now </a> </p>
-            <p>© 2020 Skote. Crafted with <i class="mdi mdi-hearttext-danger"></i> by Pablo Calderón</p>
-        </div>
+
+    <div class="form-group">
+        <label for="userpassword">Password</label>
+        <input type="password" class="form-control" placeholder="Enter password" name="password">
     </div>
+
+    <div class="custom-control custom-checkbox pb-2">
+        <input type="checkbox" class="custom-control-input" id="customControlInline">
+        <label class="custom-control-label" for="customControlInline">Remember me</label>
+    </div>
+
+    <div class="mt-3">
+        <button class="btn btn-primary btn-block waves-effectwaves-light" type="submit">Log In</button>
+    </div>
+</form>
+
+
+<div class="mt-4 text-center">
+    <h5 class="font-size-14 mb-3">Sign in with</h5>
+
+    <ul class="list-inline">
+        <li class="list-inline-item">
+            <a href="javascript::void()" class="social-list-item bg-primary text-white border-primary">
+                <i class="mdi mdi-facebook"></i>
+            </a>
+        </li>
+        <li class="list-inline-item">
+            <a href="javascript::void()" class="social-list-item bg-info text-white border-info">
+                <i class="mdi mdi-twitter"></i>
+            </a>
+        </li>
+        <li class="list-inline-item">
+            <a href="javascript::void()" class="social-list-item bg-danger text-white border-danger">
+                <i class="mdi mdi-google"></i>
+            </a>
+        </li>
+    </ul>
+</div>
+
+<div class="mt-5 text-center">
+    <div>
+        <p>Don't have an account ? <a href="{% url 'users:signup' %}" class="font-weight-medium text-primary"> Signup
+                now </a> </p>
+        <p>© 2020 Skote. Crafted with <i class="mdi mdi-hearttext-danger"></i> by Pablo Calderón</p>
+    </div>
+</div>
 
 {% endblock %}
