--- a/restaurant/templates/ingredients/ingredients.html
+++ b/restaurant/templates/ingredients/ingredients.html
@@ -2,29 +2,60 @@
 
 {% block head_content %}<title>Ingredients List!</title>{% endblock%}
 
+
+
+{% block content-title %}
+
 <style>
     #Tabla-download{
         margin-right: 20px !important;
         padding-inline: 20px !important;
     }
+
+    .title_customized{
+        text-align: center !important;
+        font-size: 18;
+    }
 </style>
 
-{% block content-title %}
-    <h4 class="mb-0 font-size-18 text-center"><strong>Stock Dashboard </strong></h4>
+
+    <h4 class="title_customized">
+        <strong>Stock Dashboard </strong>
+    </h4>
     
 {% endblock %}
 
 {% block content%}
 
-<div class="offset-1 page-content pt-0">
+<div class="offset-0 page-content pt-0">
     <div class="container-fluid">
-        <div class="table-responsive" id="Tabla-download">
-            <div class="row">
-                <div class="col-4 m-0"><a href="{% url 'ingredients:ingredient-create' %}">Create unit of measure</a></div>
-                <div class="col-4 m-0"><a href="{% url 'ingredients:ingredient-unit-create' %}">Create ingredient</a></div>
-                <div class="col-4 m-0"><a href="{% url 'ingredients:stockcreate' %}">Create stock</a></div>
+        <div class="row text-center">
+            <div class="col-2 ml-1 text-center" >
+                <h5>Management Tools</h5>
             </div>
-            <br>
+
+            <div class="col-2 offset-3">
+                <h6>Stock valued in: $ {{total_stock.total_stock}} COP</h6>
+            </div>   
+            
+        </div>
+        
+        <div class="row">
+                <div class="col-xl-1 col-md-8 col-sm-12 ">
+                    <a href="{% url 'ingredients:ingredient-create' %}">Create unit of measure</a>
+                </div>
+                <div class="col-xl-1 col-md-8 col-sm-12 ">
+                    <a href="{% url 'ingredients:ingredient-unit-create' %}">Create ingredient</a>
+                </div>
+                <div class="col-xl-1 col-md-8 col-sm-12 ">
+                    <a href="{% url 'ingredients:stockcreate' %}">Create stock</a>
+                </div>
+            </div>
+        
+        <br>
+
+        <div class="table-responsive" id="Tabla-download">
+            
             
         <table  id="example" class="table table-striped col-sm-12 col-xl-10 col-md-8 text-center border-top">
 
@@ -55,7 +86,7 @@
                         
                     </tr> 
                     {% endfor %}
-                    <p>You have a stock valued in: {{total_stock.total_stock}} COP </p>
+                     
                 </tbody>
             {% endif %}
         </table>
