Recipe-Ingredient form. Need to find JS to add more than one ingredient at once

--- a/restaurant/templates/ingredients/ingredients.html
+++ b/restaurant/templates/ingredients/ingredients.html
@@ -50,6 +50,9 @@
                 <div class="col-xl-1 col-md-8 col-sm-12 ">
                     <a href="{% url 'ingredients:stockcreate' %}">Create stock</a>
                 </div>
+                <div class="col-xl-1 col-md-8 col-sm-12 ">
+                    <a href="{% url 'recipes:recipeslist' %}">Recipes</a>
+                </div>
             </div>
         
         <br>
