--- a/restaurant/templates/recipes/recipe_create.html
+++ b/restaurant/templates/recipes/recipe_create.html
@@ -1,1 +1,59 @@
 {% extends 'ingredients/base.html' %}
+
+{% block head_content %}
+
+<title>@ Create recipes</title>
+
+{% endblock %}
+
+{% block content %}
+
+<div class="container h-30">
+    <div class="row h-100 justify-content-center align-items-center">
+        <div class="col-sm-12 col-md-5 col-lg-5 pt-2 pl-5 pr-5 pb-5" id="auth-container">
+
+            <form method="Post">
+                {% csrf_token %}
+
+                <div class="row mt-2 ">
+                    <p><strong>Create your recipes!</strong> </p>
+
+                </div>
+                
+                <div class="form-group">
+                    <label>Name your recipe!</label>
+                    <input
+                        class="form-control {% if form.name.errors %}is-invalid{% endif %}"
+                        type="text"
+                        name="name"
+                        placeholder="Recipe name"
+                        value = "{% if form.errors %}{{form.name.value}}{% endif %}"
+                    >
+                    <div class="invalid-feedback">
+                        {% for error in form.name.errors %}{{ error }}{% endfor %}
+                    </div>
+                </div>
+            
+                {# Units Field field #}
+                <!-- <div class="form-group">
+                    <label>Units:</label>
+                    <input
+                        class="form-control {% if form.units.errors %}is-invalid{% endif %}"
+                        type="text"
+                        name="units"
+                        placeholder="Unit of measure of the ingredient"
+                        required
+                    >
+                    <div class="invalid-feedback">
+                        {% for error in form.photo.errors %}{{ error }}{% endfor %}
+                    </div>
+                </div> -->
+                <button type="submit" class="btn btn-primary btn-block mt-5">Save!</button>
+            </form>
+
+        </div>
+    </div>
+</div>
+
+
+{% endblock %}
