Try to do an order template. Still need to be improved

--- a/restaurant/templates/sales.html
+++ b/restaurant/templates/sales.html
@@ -2,186 +2,93 @@
 {% load static %}
 {% block head_content %}<title>Restaurant Summary!</title>{% endblock%}
 
-<style>
-
-    .col-md-2{
-        padding-left: 50px !important;
-        padding-right: 50px !important;
-        background-color: blueviolet !important;
-    }
-
-</style>
-
-<div class="page-content ">
-    <div class="container-fluid">
-
-        {% block content-title %} <h4 class="mb-0 font-size-18">Restaurant Sales</h4> {% endblock %}
-
-        {% block content%}
-
-
-        <div class="row">
-            <div class="col-md-2 offset-1 col-lg-2 offset-1 col-sm-10 offset-1">
-                <div class="card mini-stats-wid">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <p class="text-muted font-weight-medium">Orders</p>
-                                <h4 class="mb-0">1,235</h4>
-                            </div>
-
-                            <div class="mini-stat-icon avatar-sm rounded-circle bg-primary align-self-center">
-                                <span class="avatar-title">
-                                    <i class="bx bx-copy-alt font-size-24"></i>
-                                </span>
-                            </div>
-                        </div>
+{% block content%}
+    <div class="row">
+        <div class="col-xl-8">
+            <div class="card">
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-centered mb-0 table-nowrap">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>Product</th>
+                                    <th>Product Desc</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                    <th colspan="2">Total</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <img src="assets/images/product/img-1.png" alt="product-img"
+                                            title="product-img" class="avatar-md" />
+                                    </td>
+                                    <td>
+                                        <h5 class="font-size-14 text-truncate"><a href="ecommerce-product-detail.html" class="text-dark">Half sleeve T-shirt</a></h5>
+                                        <p class="mb-0">Color : <span class="font-weight-medium">Maroon</span></p>
+                                    </td>
+                                    <td>
+                                        $ 450
+                                    </td>
+                                    <td>
+                                        <div style="width: 120px;">
+                                            <input type="text" value="02" name="demo_vertical">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        $ 900
+                                    </td>
+                                    <td>
+                                        <a href="javascript:void(0);" class="action-icon text-danger"> <i class="mdi mdi-trash-can font-size-18"></i></a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-                </div>
-
-                <div class="card mini-stats-wid">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <p class="text-muted font-weight-medium">Orders</p>
-                                <h4 class="mb-0">1,235</h4>
+                    <div class="row mt-4">
+                        <div class="col-sm-6">
+                            <a href="ecommerce-products.html" class="btn btn-secondary">
+                                <i class="mdi mdi-arrow-left mr-1"></i> Continue Shopping </a>
+                        </div> <!-- end col -->
+                        <div class="col-sm-6">
+                            <div class="text-sm-right mt-2 mt-sm-0">
+                                <a href="ecommerce-checkout.html" class="btn btn-success">
+                                    <i class="mdi mdi-cart-arrow-right mr-1"></i> Checkout </a>
                             </div>
-
-                            <div class="mini-stat-icon avatar-sm rounded-circle bg-primary align-self-center">
-                                <span class="avatar-title">
-                                    <i class="bx bx-copy-alt font-size-24"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card mini-stats-wid">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <p class="text-muted font-weight-medium">Orders</p>
-                                <h4 class="mb-0">1,235</h4>
-                            </div>
-
-                            <div class="mini-stat-icon avatar-sm rounded-circle bg-primary align-self-center">
-                                <span class="avatar-title">
-                                    <i class="bx bx-copy-alt font-size-24"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card mini-stats-wid">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <p class="text-muted font-weight-medium">Orders</p>
-                                <h4 class="mb-0">1,235</h4>
-                            </div>
-
-                            <div class="mini-stat-icon avatar-sm rounded-circle bg-primary align-self-center">
-                                <span class="avatar-title">
-                                    <i class="bx bx-copy-alt font-size-24"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-            
-            <!-- <div class="col-md-2 col-10 col-sm-10 offset-1">
-                <div class="card mini-stats-wid">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <p class="text-muted font-weight-medium">Orders</p>
-                                <h4 class="mb-0">1,235</h4>
-                            </div>
-
-                            <div class="mini-stat-icon avatar-sm rounded-circle bg-primary align-self-center">
-                                <span class="avatar-title">
-                                    <i class="bx bx-copy-alt font-size-24"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
+                        </div> <!-- end col -->
+                    </div> <!-- end row-->
                 </div>
             </div>
-            <div class="col-md-2 col-10 col-sm-10 offset-1">
-                <div class="card mini-stats-wid">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <p class="text-muted font-weight-medium">Revenue</p>
-                                <h4 class="mb-0">$35,723</h4>
-                            </div>
-
-                            <div class="avatar-sm rounded-circle bg-primary align-self-center mini-stat-icon">
-                                <span class="avatar-title rounded-circle bg-primary">
-                                    <i class="bx bx-archive-in font-size-24"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2 col-10 col-sm-10 offset-1">
-                <div class="card mini-stats-wid">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <p class="text-muted font-weight-medium">Average Ticket</p>
-                                <h4 class="mb-0">$26.200</h4>
-                            </div>
-
-                            <div class="avatar-sm rounded-circle bg-primary align-self-center mini-stat-icon">
-                                <span class="avatar-title rounded-circle bg-primary">
-                                    <i class="bx bx-purchase-tag-alt font-size-24"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
-        <div class="row">
-            <div class="table-responsive col-12 offset-1">
-                                
-                <table  id="example" class="table table-striped text-center">
-                            
-                    <thead>
-                        <tr>
-                            <th scope="col">Ingredient</th>
-                            <th scope="col">Quantity Available</th>
-                            <th scope="col">Unit of measure</th>
-                            <th scope="col">Cost</th>
-                            <th scope="col">Cost per unit</th>
-                        </tr>
-                    </thead>
-            
-                        {% if ingredients %}
-
-                    <tbody>
-                        {% for ingredient in ingredients %}
-                        <tr>
-                            <td>{{ ingredient.ingredient.name }}</td>
-                            <td>{{ ingredient.quantity }}</td>
-                            <td>{{ ingredient.ingredient.units}}</td>
-                            <td>{{ ingredient.price_total }}</td>
-                            <td> {{ingredient.price_per_unit}} </td>
-                        
-                        </tr> 
-                        {% endfor %}
-                    </tbody>
-                        {% endif %}
-                </table>
-    
-            </div>
-
         </div>
-        {% endblock %}
+        <div class="col-xl-3">            
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title mb-3">Order Summary</h4>
+
+                    <div class="table-responsive">
+                        <table class="table mb-0">
+                            <tbody>
+                                <tr>
+                                    <td>Grand Total :</td>
+                                    <td>$ 1,857</td>
+                                </tr>
+                                <tr>
+                                    <td>Discount : </td>
+                                    <td>- $ 157</td>
+                                </tr>
+                                <tr>
+                                    <th>Total :</th>
+                                    <th>$ 1744.22</th>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- end table-responsive -->
+                </div>
+            </div>
+            <!-- end card -->
+        </div>
+    </div>
+
+{% endblock %}
