--- a/restaurant/templates/ingredients/base.html
+++ b/restaurant/templates/ingredients/base.html
@@ -66,7 +66,10 @@
             <script src="{% static 'scripts/dashboard.init.js' %}"></script>
 
 
-
+            <!-- Bootrstrap touchspin -->
+            <script src="{% static 'scripts/jquery.bootstrap-touchspin.min.js' %}"></script>
+            <script src="{% static 'scripts/ecommerce-cart.init.js' %}"></script>
+            <!-- <script src="{% static 'scripts/app.js' %}"></script> -->
             
 
             <!-- Script to dataTable: download in Excel, pdf or print -->
