Architecture was done again

--- a/restaurant/templates/ingredients/base.html
+++ b/restaurant/templates/ingredients/base.html
@@ -87,6 +87,9 @@
             <script src="{% static 'DataTables/pdfmake-0.1.36/vfs_fonts.js' %}"></script>
             <script src="{% static 'DataTables/Buttons-1.7.1/js/buttons.html5.min.js' %}"></script>
 
+             <!-- form advanced init -->
+            <script src="{% static 'scripts/form-advanced.init.js' %}"></script>
+
             <!-- App js -->
             <!-- <script src="{% static 'scripts/app.js' %}"></script> -->
     </body>
